--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "nodemailer": "^7.0.3",
+    "puppeteer-core": "^24.10.2",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
